# tickvault

./: .ci-verified  .editorconfig  .gitignore  .mcp.json  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README-LOCAL.md  README.md  SECURITY.md  Start TickVault.command  Stop TickVault.command  clippy.toml  deny.toml  plan.md  renovate.json  rust-toolchain.toml  typos.toml
crates/api/: Cargo.toml
crates/api/src/: feed_state.rs  feed_state_persist.rs  lib.rs  middleware.rs  public_guard.rs  response_cache.rs  state.rs  test_support.rs
crates/api/static/: index.html  market-dashboard.html  markets-index.html  markets-options.html  markets-stocks.html  option-chain-v2.html  options-chain.html  portal.html  terminal.css  terminal.html  terminal.js  ws-dashboard.html
crates/api/tests/: api_smoke.rs  auth_middleware.rs  contract_tests.rs  debug_auth_gate.rs  debug_spill_and_health_detail.rs  env_lock_guard.rs  gap_enforcement.rs  health_counter_fix7_guard.rs  health_questdb_reachable_wiring_guard.rs  panic_safety.rs  route_coverage.rs  token_headroom_wired_guard.rs  tv_api_token_prod_guard.rs
crates/app/: Cargo.toml
crates/app/benches/: order_gate.rs
crates/app/examples/: persist_snapshot.rs
crates/app/src/: api_token_rotation.rs  apply_reconcile_plan.rs  bar_cache_loader.rs  bhavcopy_pipeline.rs  boot_helpers.rs  boot_smoke_test.rs  brutex_crossverify_boot.rs  brutex_crossverify_compare.rs  cadence_boot.rs  cadence_escalation.rs  calendar_staleness.rs  candle_ddl_boot.rs  core_pinning.rs  cross_fill_visibility.rs  cross_verify_1m_boot.rs  daily_task_marker.rs  daily_universe_boot.rs  day_ohlc_orchestrator.rs  depth_20_conn_spawner.rs  depth_20_single_side_planner.rs  depth_bridge_state_writer.rs  depth_dynamic_pipeline.rs  depth_dynamic_pipeline_v2.rs  dhan_activation.rs  dhan_cadence_executor.rs  dhan_data_api_limiter.rs  dhan_intraday_parse.rs  dhan_order_push_observability.rs  dhan_rest_stack.rs  exit_execution.rs  feed_scoreboard_boot.rs  greeks_pipeline.rs  groww_activation.rs  groww_bridge.rs  groww_cadence_executor.rs  groww_contract_1m_boot.rs  groww_fleet_alerts.rs  groww_native_shadow.rs  groww_option_chain_1m_boot.rs  groww_order_observability.rs  (+51 more)
crates/app/tests/: aggregation_task_wiring_guard.rs  api_token_rotation_wiring_guard.rs  auth_failed_alarm_wiring_guard.rs  boot_completed_metric_guard.rs  boot_health_check_wired_guard.rs  boot_path_notify_parity.rs  boot_symmetry_post_market_guard.rs  cadence_boot_wiring_guard.rs  cadence_executor_purity_guard.rs  cadence_mark_source_guard.rs  candle_cascade_wiring_guard.rs  chaos_boot_scenarios.rs  chaos_feed_state_matrix.rs  clock_skew_gate_wiring_guard.rs  close_pct_realtime_proof_guard.rs  cloudwatch_agent_glob_guard.rs  cross_verify_1m_visibility_guard.rs  cross_verify_post_market_only_guard.rs  d2_stage2_hoist_guard.rs  d2a_start_dhan_lane_guard.rs  daily_universe_boot_wiring_guard.rs  depth_pools_truthful_emit_guard.rs  dhan_data_api_limiter_wiring_guard.rs  dhan_live_off_phase_a_guard.rs  dhat_mark_forward.rs  disk_retention_wiring_guard.rs  ensure_ddl_boot_wiring_guard.rs  far_month_alarm_gate_wiring_guard.rs  fast_boot_token_validation_wiring_guard.rs  feature_flag_rollback_guard.rs  feed_toggle_lifecycle_guard.rs  groww_chain_1m_wiring_guard.rs  groww_contract_1m_wiring_guard.rs  groww_feed_down_alert_guard.rs  groww_live_pipeline_e2e.rs  groww_reject_cooldown_wiring_guard.rs  groww_spot_1m_wiring_guard.rs  groww_universe_wiring_guard.rs  http_client_fallback_guard.rs  infra_runtime_helpers.rs  (+47 more)
crates/aws-lambdas/: Cargo.toml
crates/aws-lambdas/src/: alarm_gate.rs  budget_digest.rs  budget_killswitch.rs  clients.rs  deploy_watchdog.rs  events.rs  hard_stop_guard.rs  lib.rs  logging.rs  market_hours_gate.rs  market_open_readiness.rs  operator_control.rs  operator_control_action_commands.rs  operator_control_commands.rs  operator_control_console.html  qdb_console_front.rs  qdb_console_proxy.rs  start_watchdog.rs  telegram_webhook.rs  time.rs
crates/common/: Cargo.toml  build.rs
crates/common/benches/: calendar.rs  config.rs
crates/common/proptest-regressions/: moneyness.txt
crates/common/src/: always_on.rs  broker_order_events.rs  build_info.rs  candle_fold.rs  config.rs  constants.rs  disconnect_cause.rs  error.rs  error_code.rs  feed.rs  feed_blame.rs  feed_health.rs  feed_parity.rs  formulas.rs  instrument_registry.rs  instrument_types.rs  lib.rs  live_bar_freshness.rs  locked_universe.rs  market_hours.rs  moneyness.rs  mover_types.rs  muhurat.rs  open_price_rest_fallback.rs  open_price_source.rs  option_chain_schedule.rs  order_types.rs  phase.rs  portfolio_types.rs  price_precision.rs  sanitize.rs  segment.rs  source_scan.rs  tick_types.rs  trading_calendar.rs  types.rs  url_join.rs  ws_event_types.rs
crates/common/tests/: ab_testing_verification.rs  audit_100pct_tracker_guard.rs  autonomous_ops_m3_m4_guard.rs  aws_alarm_semantics_guard.rs  aws_infra_wiring.rs  bench_budget_elements_guard.rs  bible_deletion_lockdown.rs  boot_timeout_consistency_guard.rs  budget_killswitch_wiring.rs  calendar_coverage_horizon_guard.rs  claude_mcp_endpoints_config_guard.rs  claude_session_bootstrap_guard.rs  claude_triage_lambda_guard.rs  cloudwatch_app_alarms_wiring.rs  config_round_trip.rs  coverage_threshold_lockdown.rs  cross_verify_always_write_jsonl_html_guard.rs  cross_verify_outcome_pass_fail_only_guard.rs  cross_verify_yesterday_today_guard.rs  deny_config_wiring.rs  deploy_provenance_guard.rs  depth_invariants_proptest.rs  dhan_api_coverage.rs  dhan_ip_registration_script_wiring.rs  dhan_locked_facts.rs  dlt_doctor_binary_wiring.rs  error_code_paging_filter_drift_guard.rs  error_code_rule_file_crossref.rs  error_code_tag_guard.rs  github_workflow_guard.rs  grafana_alerts_wiring.rs  groww_capture_archive_guard.rs  (+32 more)
crates/core/: Cargo.toml
crates/frontend-wasm/: Cargo.toml
crates/storage/: Cargo.toml
crates/tickvault-logs-mcp/: Cargo.toml
crates/trading/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parser.rs  tick_parser.rs  ws_frame_wal_replay.rs
(+2792 files in other folders)
