[workspace]
members = ["crates/*"]
exclude = ["fuzz", "crates/frontend-wasm"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "MIT"

[workspace.dependencies]
# S6-Step8 / S7: Cargo.toml is the executable single source of truth.
# (Tech Stack Bible deleted 2026-04-14.) Use exact pins (no ^/~/*).
# Run `bash .claude/hooks/dep-freshness-scanner.sh` to check for drift.

# ---- Section 2: Backend Core — Async Runtime ----
tokio = { version = "1.51.1", features = ["full"] }

# ---- Section 2: Backend Core — WebSocket ----
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"

# ---- Section 2: Backend Core — Zero-Copy Parsing ----
zerocopy = { version = "0.8.48", features = ["derive"] }

# ---- Section 2: Backend Core — Dispatch ----
enum_dispatch = "0.3.13"

# ---- Section 3: Data Pipeline ----
papaya = "0.2.4"
dashmap = "6.1.0"
crossbeam-channel = "0.5.15"
rtrb = "0.3.3"
ringbuf = "0.4.8"

# ---- Section 4: Database & Cache ----
questdb-rs = { version = "6.1.0", features = ["chrono_timestamp"] }
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.23.0"

# ---- Section 5: Observability — Metrics ----
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
hdrhistogram = "7.5.4"
quanta = "0.12.6"

# ---- Section 5: Observability — OpenTelemetry ----
# Versions pinned to 0.31.0 to match tracing-opentelemetry 0.32.1 (which depends on opentelemetry 0.31.0)
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }

# ---- Section 5: Observability — Tracing ----
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.1"
# Phase 2 of plans/active-plan.md: hourly-rotated ERROR-only JSONL stream
# at data/logs/errors.jsonl so Claude Code / Loki / summary_writer can tail
# a structured, append-only file instead of parsing journald prose.
tracing-appender = "0.2.5"

# ---- Section 6: Trading Domain — Auth ----
arc-swap = "1.9.1"
jsonwebtoken = "10.3.0"
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }

# ---- Section 6: Trading Domain — OMS & Risk ----
statig = "0.4.1"
jaeckel = "0.2.0"
governor = "0.10.4"
failsafe = "1.3.0"
backon = "1.6.0"
yata = "0.7.0"

# ---- Section 7: HTTP Client ----
# reqwest 0.13: features that were "default" in 0.12 are now opt-in. We
# keep `default-features = false` to avoid pulling native-tls (rustls-only
# policy on this project) and explicitly enable: json (REST payloads),
# rustls (TLS — was `rustls-tls` in 0.12), charset (Response::text() decoder),
# http2 (Dhan REST uses HTTP/2), query (RequestBuilder::query for QuestDB ILP).
reqwest = { version = "0.13.2", features = ["json", "rustls", "charset", "http2", "query"], default-features = false }

# ---- Section 8: HTTP Server ----
axum = { version = "0.8.8", features = ["macros", "ws"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip", "fs"] }

# ---- Section 9: Configuration ----
toml = "1.1.2"
figment = { version = "0.10.19", features = ["toml", "env"] }

# ---- Section 10: Date & Time ----
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"

# ---- Section 11: Serialization & Errors ----
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bitcode = "0.6.9"
rkyv = { version = "0.8.15", features = ["std", "bytecheck"] }
csv = "1.4.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
bytes = "1.11.1"

# ---- Section 12: System & Resilience ----
core_affinity = "0.8.3"
memmap2 = "0.9.10"
notify = "8.2.0"
# signal-hook-tokio removed in S11 — dead dep with zero references across
# crates/ and fuzz/. signal-hook itself is kept because crates/app/Cargo.toml
# declares it with { workspace = true } (via machete ignore list) for a
# Windows-only code path we might enable later.
signal-hook = "0.4.4"
sd-notify = "0.5.0"
ahash = "0.8.12"
nohash-hasher = "0.2.0"
arrayvec = "0.7.6"

# ---- Section 14: Security & Secrets ----
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# ---- Section 14: TLS — Crypto Provider for rustls ----
# Both tokio-tungstenite and reqwest depend on rustls 0.23+, which requires
# an explicit CryptoProvider. We use aws-lc-rs (already in the dep tree).
rustls = { version = "0.23.37", default-features = false, features = ["aws_lc_rs"] }
rustls-native-certs = "0.8.3"

# ---- Section 11: AWS SDK ----
aws-config = "1.8.15"
aws-sdk-sns = "1.98.0"
aws-sdk-ssm = "1.108.0"

# ---- Section 16: CLI ----
clap = { version = "4.6.0", features = ["derive"] }

# ---- Section 17: Unique IDs ----
uuid = { version = "1.23.0", features = ["v4", "serde"] }

# ---- Section 18: Telegram Alerts ----
teloxide = { version = "0.17.0", features = ["macros"] }

# ---- Section 13: Dev/Test Dependencies ----
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
loom = "0.7.2"
dhat = "0.3.3"
tokio-test = "0.4.5"

# Build Profiles

[profile.release]
overflow-checks = true    # Integer overflow = panic (not silent wrap) — critical for financial math
lto = "thin"              # Link-time optimization — smaller binary, dead code elimination
codegen-units = 1         # Single codegen unit — better optimization at cost of compile time
strip = "symbols"         # Strip debug symbols from release binary
panic = "abort"           # No stack unwinding in production — smaller, faster, no catch_unwind

[profile.dev]
# Keep defaults for dev — fast compilation, debug symbols, overflow checks on by default
