[workspace]
members = ["crates/*"]
exclude = ["fuzz", "crates/frontend-wasm"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "MIT"

[workspace.dependencies]
# S6-Step8 / S7: Cargo.toml is the executable single source of truth.
# (Tech Stack Bible deleted 2026-04-14.) Use exact pins (no ^/~/*).
# Run `bash .claude/hooks/dep-freshness-scanner.sh` to check for drift.

# ---- Section 2: Backend Core — Async Runtime ----
tokio = { version = "1.52.3", features = ["full"] }

# ---- Section 2: Backend Core — WebSocket ----
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"

# ---- Section 2: Backend Core — Zero-Copy Parsing ----
# zerocopy removed 2026-06-10 (operator-approved dead-pin cleanup): declared
# in crates/core but zero call sites — binary parsing uses fixed-offset
# from_le_bytes reads, never the zerocopy derive machinery.

# ---- Section 3: Data Pipeline ----
papaya = "0.2.4"
crossbeam-channel = "0.5.15"
rtrb = "0.3.4"
# ringbuf removed 2026-06-10 (operator-approved dead-pin cleanup): zero
# consumers — hot-path ring buffers use rtrb + crossbeam-channel.
# Wave 6 Sub-PR #1 (2026-05-10): per-cell mutex for the multi-TF
# aggregator's `[Mutex<LiveCandleState>; 9]` per-instrument array.
# Operator-approved alternative to `crossbeam_utils::atomic::AtomicCell`
# (locked decision L-C2): `LiveCandleState` is ~64 bytes which is
# beyond AtomicCell's 16-byte lock-free threshold, so AtomicCell would
# spin-lock internally anyway. parking_lot::Mutex is ~30ns uncontended,
# never poisons, and is already present transitively via tokio /
# tokio-tungstenite.
parking_lot = "0.12.5"

# ---- Section 4: Database ----
# Valkey/redis was removed in #O4 (2026-05-24). Dual-instance lock
# lives in AWS SSM (PR #764); token-cache crash recovery is file-based
# (`crates/core/src/auth/token_cache.rs`). No remaining production
# caller needs an in-memory KV store.
questdb-rs = { version = "6.1.0", features = ["chrono_timestamp"] }

# ---- Section 5: Observability — Metrics ----
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
quanta = "0.12.6"

# ---- Section 5: Observability — OpenTelemetry ----
# The 4 otel crates are a MATCHED SET: tracing-opentelemetry 0.33.0 depends on
# opentelemetry/opentelemetry_sdk/opentelemetry-otlp ^0.32. Bump all 4 together
# or none (single-crate bumps split the dependency tree and fail to compile —
# see .claude/plans/research/dep-decisions.md §1, dependabot PR #938 post-mortem).
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }

# ---- Section 5: Observability — Tracing ----
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.33.0"
# Phase 2 of plans/active-plan.md: hourly-rotated ERROR-only JSONL stream
# at data/logs/errors.jsonl so Claude Code / Loki / summary_writer can tail
# a structured, append-only file instead of parsing journald prose.
tracing-appender = "0.2.5"

# ---- Section 6: Trading Domain — Auth ----
# jsonwebtoken removed 2026-06-10 (operator-approved dead-pin cleanup): zero
# consumers anywhere in the repo — the Dhan JWT is handled as an opaque
# Secret<String>, never decoded locally.
arc-swap = "1.9.1"
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }

# ---- Section 6: Trading Domain — OMS & Risk ----
governor = "0.10.4"

# ---- Section 7: HTTP Client ----
# reqwest 0.13: features that were "default" in 0.12 are now opt-in. We
# keep `default-features = false` to avoid pulling native-tls (rustls-only
# policy on this project) and explicitly enable: json (REST payloads),
# rustls (TLS — was `rustls-tls` in 0.12), charset (Response::text() decoder),
# http2 (Dhan REST uses HTTP/2), query (RequestBuilder::query for QuestDB ILP).
reqwest = { version = "0.13.4", features = ["json", "rustls", "charset", "http2", "query"], default-features = false }

# ---- Section 8: HTTP Server ----
axum = { version = "0.8.9", features = ["macros", "ws"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace", "compression-gzip", "fs"] }

# ---- Section 9: Configuration ----
toml = "1.1.2"
figment = { version = "0.10.19", features = ["toml", "env"] }

# ---- Section 10: Date & Time ----
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"

# ---- Section 11: Serialization & Errors ----
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rkyv = { version = "0.8.16", features = ["std", "bytecheck"] }
csv = "1.4.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
bytes = "1.11.1"
sha2 = "0.11.0"

# ---- Section 12: System & Resilience ----
core_affinity = "0.8.3"
memmap2 = "0.9.11"
notify = "8.2.0"
# signal-hook-tokio removed in S11 — dead dep with zero references across
# crates/ and fuzz/. signal-hook itself is kept because crates/app/Cargo.toml
# declares it with { workspace = true } (via machete ignore list) for a
# Windows-only code path we might enable later.
signal-hook = "0.4.4"
sd-notify = "0.5.0"
ahash = "0.8.12"
nohash-hasher = "0.2.0"
arrayvec = "0.7.6"

# ---- Section 14: Security & Secrets ----
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# ---- Section 14: TLS — Crypto Provider for rustls ----
# Both tokio-tungstenite and reqwest depend on rustls 0.23+, which requires
# an explicit CryptoProvider. We use aws-lc-rs (already in the dep tree).
rustls = { version = "0.23.40", default-features = false, features = ["aws_lc_rs"] }
rustls-native-certs = "0.8.4"

# ---- Section 11: AWS SDK ----
# 2026-05-23: opt out of each crate's legacy `rustls` feature (which pulls
# vulnerable rustls 0.21 + rustls-webpki 0.101.7 via aws-smithy-http-client's
# `legacy-rustls-ring`) and opt INTO `default-https-client` instead, which
# routes through `aws-smithy-http-client/rustls-aws-lc` (rustls 0.23 +
# aws-lc-rs — already pinned by the workspace at line 136). Closes the 3
# RUSTSEC advisories on the AWS chain without an upstream SDK release.
aws-config = { version = "1.8.18", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-sdk-sns = { version = "1.103.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1.112.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }

# ---- Section 16: CLI ----
clap = { version = "4.6.1", features = ["derive"] }

# ---- Section 17: Unique IDs ----
uuid = { version = "1.23.2", features = ["v4", "serde"] }

# ---- Section 18: Telegram Alerts ----
teloxide = { version = "0.17.0", features = ["macros"] }

# ---- Section 13: Dev/Test Dependencies ----
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
loom = "0.7.2"
dhat = "0.3.3"
tokio-test = "0.4.5"

# Build Profiles

[profile.release]
overflow-checks = true    # Integer overflow = panic (not silent wrap) — critical for financial math
lto = "thin"              # Link-time optimization — smaller binary, dead code elimination
codegen-units = 1         # Single codegen unit — better optimization at cost of compile time
strip = "symbols"         # Strip debug symbols from release binary
panic = "abort"           # No stack unwinding in production — smaller, faster, no catch_unwind

[profile.dev]
# Keep defaults for dev — fast compilation, debug symbols, overflow checks on by default
