[package]
name = "tickvault-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.93.1"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"
toml = "1.0.4"
tickvault-core = { path = "../crates/core" }
tickvault-common = { path = "../crates/common" }
tickvault-storage = { path = "../crates/storage" }

[[bin]]
name = "tick_parser"
path = "fuzz_targets/tick_parser.rs"
doc = false

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
doc = false

[[bin]]
name = "ws_frame_wal_replay"
path = "fuzz_targets/ws_frame_wal_replay.rs"
doc = false
