[package]
name = "tickvault-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tickvault-core = { path = "../core" }
tickvault-storage = { path = "../storage" }
# Phase 4a (2026-05-05): the dormant /api/movers?v=2 handler reads
# OHLCV from the in-RAM 29-TF CascadeFanout which lives in
# tickvault-trading. Promoted from [dev-dependencies] to
# [dependencies] for production wiring. The actual route + handler
# stays gated behind config.api.movers_v2_enabled (default false).
tickvault-trading = { path = "../trading" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
# 2026-04-25 security audit (PR #357): bearer_token migrated from
# `String` (with manual zeroize::Zeroize Drop impl) to `secrecy::SecretString`
# per .claude/rules/project/rust-code.md (mandated secret type).
# `secrecy` provides Drop+Zeroize transitively; the direct `zeroize` dep is
# no longer needed in this crate.
secrecy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[package.metadata.cargo-machete]
ignored = ["anyhow", "chrono", "tickvault-storage", "thiserror", "tower"]
