[package]
name = "tickvault-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tickvault-core = { path = "../core" }
tickvault-storage = { path = "../storage" }
# tickvault-trading: originally promoted to [dependencies] for the
# /api/movers?v=2 handler (Phase 4a, 2026-05-05). That route + its
# `movers_v2_enabled` gate were deleted (AWS-lifecycle PR #2,
# 2026-05-18; knob removed 2026-07-06). Today only the crate's
# integration tests use it (contract_tests.rs OMS types).
tickvault-trading = { path = "../trading" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
# 2026-04-25 security audit (PR #357): bearer_token migrated from
# `String` (with manual zeroize::Zeroize Drop impl) to `secrecy::SecretString`
# per .claude/rules/project/rust-code.md (mandated secret type).
# `secrecy` provides Drop+Zeroize transitively; the direct `zeroize` dep is
# no longer needed in this crate.
secrecy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[package.metadata.cargo-machete]
ignored = ["anyhow", "chrono", "tickvault-storage", "thiserror", "tower"]
