[package]
name = "tickvault-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "tickvault_app"
path = "src/lib.rs"

[[bin]]
name = "tickvault"
path = "src/main.rs"

[dependencies]
tickvault-common = { path = "../common" }
tickvault-core = { path = "../core" }
tickvault-trading = { path = "../trading" }
tickvault-storage = { path = "../storage" }
tickvault-api = { path = "../api" }
tokio = { workspace = true }
governor = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-appender = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
figment = { workspace = true }
clap = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
signal-hook = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
core_affinity = { workspace = true }
# 2026-07-12 (BruteX crossverify Commit 2): the 15:50 IST daily task reads the
# BruteX-produced Groww 1m CSVs from S3 (tv-prod-cold, read-only GET/List —
# the instance role already holds the permissions; ZERO IAM change).
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
# Event-driven (zero-poll) file watching for the Groww bridge tick-file tail
# (operator 2026-06-28: "true zero latency, no polling"). Same crate + pin the
# strategy hot-reloader uses (`crates/trading/src/strategy/hot_reload.rs`) —
# cross-platform inotify/FSEvents, so Mac dev == AWS prod (common runtime).
notify = { workspace = true }
# Only the feature-gated daily-universe boot orchestrator hashes the CSV
# (source_csv_sha256 provenance); optional so the default build stays lean.

[dev-dependencies]
# start_paused virtual-time tests for the exit-execution verify ladder
# (same pattern as crates/core + crates/api dev-deps).
tokio = { workspace = true, features = ["test-util"] }

[features]
# PR-C3 (2026-07-14): the `daily_universe_fetcher` feature (and its sha2
# optional dep) was DELETED with the Dhan instrument-download chain
# (operator retirement directive 2026-07-13, scope-lock amendment §B). The
# formerly-gated SEBI persistence modules in `tickvault-storage` are now
# compiled unconditionally.
default = []

[dev-dependencies]
# Order-runtime dry-run PR (2026-07-14): DHAT zero-alloc ratchet + Criterion
# budget evidence for the Groww-bridge mark-forward hot-path tap. Both are
# existing workspace pins (no new dependency roots).
criterion = { workspace = true }
dhat = { workspace = true }

[[bench]]
name = "order_gate"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "clap", "signal-hook"]
