[package]
name = "tickvault-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "tickvault_app"
path = "src/lib.rs"

[[bin]]
name = "tickvault"
path = "src/main.rs"

[dependencies]
tickvault-common = { path = "../common" }
tickvault-core = { path = "../core" }
tickvault-trading = { path = "../trading" }
tickvault-storage = { path = "../storage" }
tickvault-api = { path = "../api" }
tokio = { workspace = true }
governor = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-appender = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
figment = { workspace = true }
clap = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
signal-hook = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
core_affinity = { workspace = true }
# 2026-07-12 (BruteX crossverify Commit 2): the 15:50 IST daily task reads the
# BruteX-produced Groww 1m CSVs from S3 (tv-prod-cold, read-only GET/List —
# the instance role already holds the permissions; ZERO IAM change).
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
# Event-driven (zero-poll) file watching for the Groww bridge tick-file tail
# (operator 2026-06-28: "true zero latency, no polling"). Same crate + pin the
# strategy hot-reloader uses (`crates/trading/src/strategy/hot_reload.rs`) —
# cross-platform inotify/FSEvents, so Mac dev == AWS prod (common runtime).
notify = { workspace = true }
# Only the feature-gated daily-universe boot orchestrator hashes the CSV
# (source_csv_sha256 provenance); optional so the default build stays lean.

[features]
# PR-C3 (2026-07-14): the `daily_universe_fetcher` feature (and its sha2
# optional dep) was DELETED with the Dhan instrument-download chain
# (operator retirement directive 2026-07-13, scope-lock amendment §B). The
# formerly-gated SEBI persistence modules in `tickvault-storage` are now
# compiled unconditionally.
default = []

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "clap", "signal-hook"]
